--- a/templates/layouts/success.html
+++ b/templates/layouts/success.html
@@ -23,7 +23,7 @@
             {% else %}
                 <h3>your alert for keywords '{{ keywords }}' with any price has been created</h2>
             {% endif %}
-            <h3>an email will be sent to you once a deal has been found. click [here] to register another set of keywords</h3>
+            <h3>an email will be sent to you once a deal has been found. click <a href="/" style="text-decoration:none">here</a> to register another set of keywords</h3>
         </section>
         <section class="content bgcolor">
             <h4>
